Fix version collapsing

--- a/web/static/css/base/_general.scss
+++ b/web/static/css/base/_general.scss
@@ -30,3 +30,7 @@ a {
 .stat-icon-calendar {
   font-size: 38px;
 }
+
+.collapsing {
+  transition-duration: .5s !important;
+}
